--- a/InventarioAplicativo/appsettings.json
+++ b/InventarioAplicativo/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DevConnection":  "Server=(local)\\sqlexpress;Database=ItemDB;Trusted_Connection=True;MultipleActiveResultSets=True;"
+    "DevConnection": "Server=(localdb)\\MSSQLLocalDB;Database=ItemDB;Trusted_Connection=True;MultipleActiveResultSets=True;"
   }
 }
