Adiçao da tela de login, a mesma ainda não se encontra funcional

--- a/InventarioAplicativo/appsettings.json
+++ b/InventarioAplicativo/appsettings.json
@@ -5,7 +5,13 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DevConnection": "Server=(localdb)\\MSSQLLocalDB;Database=ItemDB;Trusted_Connection=True;MultipleActiveResultSets=True;"
+
+  "Data": {
+    "ItemsInventario": {
+      "ConnectionStrings": "Server=(localdb)\\MSSQLLocalDB;Database=ItemDB;Trusted_Connection=True;MultipleActiveResultSets=True;"
+    },
+    "ItemsInventarioIdentity": {
+      "ConnectionStrings": "Server=(localdb)\\MSSQLLocalDB;Database=ItemIdentity;Trusted_Connection=True;MultipleActiveResultSets=True;"
+    }
   }
 }
